# litecms

./: .env.example  .gitignore  README.md  openapi-ts.config.ts  openapi.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.agent/: rules.md
application/: __init__.py  commands.py  deps.py  guards.py  main.py  router.py  security.py  utils.py
application/accounts/: __init__.py  commands.py  models.py  schemas.py  services.py
application/articles/: controllers.py  models.py  schemas.py  services.py
application/config/: __init__.py  exceptions.py  middleware.py  openapi.py  settings.py  sqlalchemy.py  stores.py  structlog.py  template.py
application/contents/: enums.py  models.py  schemas.py  services.py
application/media/: __init__.py  controllers.py  models.py  schemas.py
application/taxonomies/: services.py  utils.py
application/themes/: __init__.py  controllers.py  schemas.py
application/web/: controllers.py  events.py  exceptions.py  jinja2.py  middleware.py  plugin.py  schemas.py  stores.py  urls.py  utils.py
docs/: frontend-deployment.md  template-system-design.md  vite.config.ts
docs/deploy/: .env.production  install.sh  litecms.service  logrotate.conf  myshop.service  nginx.conf
resources/: main.tsx  routes.tsx
resources/components/: error-boundary.tsx  require-permission.tsx  sidebar.tsx
resources/lib/: api.ts  auth.ts  routes-config.ts  utils.ts
resources/openapi/: index.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
resources/pages/: 404.tsx  index.tsx  layout.tsx
storage/: .gitignore
(+175 files in other folders)
