[project]
name = "litecms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.8.0",
    "aiosqlite>=0.22.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastnanoid>=0.4.3",
    "granian[reload]>=2.6.0",
    "litestar[jinja,sqlalchemy,standard]>=2.18.0",
    "ossfs>=2025.5.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sniffio>=1.3.1",
    "structlog>=25.5.0",
    "uuid-utils>=0.11.1",
]

[project.scripts]
dev = "application.main:dev"
start = "application.main:start"
stop = "application.main:stop"
serve = "application.main:serve"
deploy = "application.main:deploy"
help = "application.main:help"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["application*"]


